# nodejs/class-notes/TEKRAR/21-FlightAPI_1/src/controllers/passenger.js
@@ -38,7 +38,7 @@ module.exports = {
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-                schema: {}
+                schema: { $ref : '#/definitions/Passenger'}
             }
         */
 
@@ -72,7 +72,7 @@ module.exports = {
             #swagger.parameters['body'] = {
                 in: 'body',
                 required: true,
-                schema: {}
+                schema: { $ref : '#/definitions/Passenger'}
             }
         */
 
